--- a/about.html
+++ b/about.html
@@ -11,7 +11,12 @@
 
 </head>
 
+
 <body>
+    <div>
+        <div class="greeting"></div>
+        <h1>Actualizado 31/05/23</h1>
+    </div>
 
     <div class="container-nav">
         <nav class="navbar" role="navigation">
